examples/test/testpolicy8878.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8878
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key9: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value42
          key22: value42
      podSelector:
        matchLabels:
          key38: value43
          key8: value45
